Possibly fixed text overflow in safari

--- a/pages/home/pile.css
+++ b/pages/home/pile.css
@@ -23,6 +23,7 @@
     font-size: 2.5rem;
     width: 100%;
     white-space: pre-line;
+    overflow-wrap: normal;
 }
 
 .pile-item-desc {
